--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/Modificar.cshtml
@@ -34,8 +34,31 @@
                     @Html.ValidationMessageFor(q => q.CodCbteCble, "", new { @class = "text-danger" })
                 </div>
             </div>
-
-            <div class="col-md-offset-7 col-md-3">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="IdTipoCbte">Tipo comprobante</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdTipoCbte, settings =>
+               {
+                   settings.Name = "IdTipoCbte";
+                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                   settings.Properties.Columns.Add("IdTipoCbte", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                   settings.Properties.Columns.Add("tc_TipoCbte", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
+                   //Campo ID
+                   settings.Properties.ValueField = "IdTipoCbte";
+                   settings.Properties.ValueType = typeof(int);
+                   settings.Properties.TextField = "tc_TipoCbte";
+                   //Boton para seleccionar ningun registro
+                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+                   settings.Properties.NullText = "== Seleccione ==";
+                   settings.Properties.DropDownButton.Enabled = false;
+                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+                   settings.ReadOnly = true;
+               }).BindList(ViewBag.lst_tipo_comprobante).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="">Fecha de comprobante</label>
                     <div class="input-group date">
@@ -53,34 +76,6 @@
                     }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cb_Fecha, "", new { @class = "text-danger" })
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    <label for="IdTipoCbte">Tipo comprobante</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdTipoCbte, settings =>
-               {
-                   settings.Name = "IdTipoCbte";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdTipoCbte", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("tc_TipoCbte", "Descripción").Width = System.Web.UI.WebControls.Unit.Percentage(90);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdTipoCbte";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "tc_TipoCbte";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownButton.Enabled = false;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                   settings.ReadOnly = true;
-               }).BindList(ViewBag.lst_tipo_comprobante).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdTipoCbte, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
@@ -113,13 +108,3 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
-<script>
-    $(function () {
-
-        //Date picker
-        $('#cb_Fecha').datepicker({
-            autoclose: true
-        })
-    });
-
-</script>
