--- a/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Nuevo.cshtml
@@ -9,7 +9,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
 @using (Html.BeginForm("Nuevo", "TipoDocumentoTalonario", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -120,7 +119,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <div class="checkbox">
-                        <label for="es_Documento_Electronico">@Html.CheckBoxFor(q => q.es_Documento_Electronico, new { @id = "es_Documento_Electronico_bool" }) Es documento electronico</label>
+                        <label for="es_Documento_Electronico_bool">@Html.CheckBoxFor(q => q.es_Documento_Electronico, new { @id = "es_Documento_Electronico_bool" }) Es documento electronico</label>
                     </div>
                 </div>
             </div>
@@ -162,6 +161,7 @@
 
 <script>
     $(function () {
+        ocultar_mostrar_div_autorizacion();
 
         $('#FechaCaducidad').datepicker({
             autoclose: true
@@ -184,13 +184,7 @@
             set_documentofinal();
         });
 
-        $("#es_Documento_Electronico").change(function () {
-            ocultar_mostrar_div_autorizacion();
-        });
-        $("#NumAutorizacion").change(function () {
-            ocultar_mostrar_div_autorizacion();
-        });
-        $("#FechaCaducidad").change(function () {
+        $("#es_Documento_Electronico_bool").change(function () {
             ocultar_mostrar_div_autorizacion();
         });
     })
@@ -226,6 +220,16 @@
         }
     }
 
+    function ocultar_mostrar_div_autorizacion() {
+        var doc_electronico = ($("#es_Documento_Electronico_bool:checked").val());
+
+        if (doc_electronico == "true") {
+            $("#div_autorizacion").hide();
+        } else {
+            $("#div_autorizacion").show();
+        }
+    }
+
     function rellenar_ceros_izquierda() {
         var str = "" + Number($("#NumDocumento").val());
         var pad = "000000000";
@@ -245,15 +249,7 @@
         $("#Documentofinal").val(doc);
     }
 
-    function ocultar_mostrar_div_autorizacion() {
-        var doc_electronico = ($("#es_Documento_Electronico:checked").val());
-        if(doc_electronico=="true")
-        {
-            $("#div_autorizacion").hide();
-        } else {
-            $("#div_autorizacion").show();
-        }
-    }
+
 
 
 </script>
