--- a/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/TipoDocumentoTalonario/Modificar.cshtml
@@ -114,7 +114,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <div class="checkbox">
-                        <label for="es_Documento_Electronico">@Html.CheckBoxFor(q => q.es_Documento_Electronico) Es documento electronico</label>
+                        <label for="es_Documento_Electronico_bool">@Html.CheckBoxFor(q => q.es_Documento_Electronico, new { @id = "es_Documento_Electronico_bool" }) Es documento electronico</label>
                     </div>
                 </div>
             </div>
@@ -170,10 +170,15 @@
         });
 
         ocultar_mostrar_div_autorizacion();
+
+        $("#es_Documento_Electronico_bool").change(function () {
+            ocultar_mostrar_div_autorizacion();
+        });
     })
 
     function ocultar_mostrar_div_autorizacion() {
-        var doc_electronico = ($("#es_Documento_Electronico:checked").val());
+        var doc_electronico = ($("#es_Documento_Electronico_bool:checked").val());
+
         if (doc_electronico == "true") {
             $("#div_autorizacion").hide();
         } else {
