--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_contable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_contable.cshtml
@@ -88,7 +88,17 @@
             column.Width = Unit.Percentage(10);
         });
         settings.Columns.Add("cb_Observacion", "Descripción").Width = Unit.Percentage(50);
-        settings.Columns.Add("cb_Estado", "Estado").Width = Unit.Percentage(5);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+
         settings.Columns.Add(column =>
         {
             column.SetDataItemTemplateContent(c =>
