--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_periodocontable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/PeriodoContable/_GridViewPartial_periodocontable.cshtml
@@ -85,8 +85,18 @@
         settings.Columns.Add("pe_mes", "Mes").Width = Unit.Percentage(10);
         settings.Columns.Add("pe_FechaIni", "Fecha incio").Width = Unit.Percentage(20);
         settings.Columns.Add("pe_FechaFin", "Fecha fin").Width = Unit.Percentage(20);
-        settings.Columns.Add("pe_estado", "Estado").Width = Unit.Percentage(20);
         settings.Columns.Add("pe_cerrado", "Cerrado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+
     });
 }
 @grid.Bind(Model).GetHtml()
