--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/Modificar.cshtml
@@ -224,7 +224,8 @@
 
         var datos = {
             IDs: selectedIDs,
-            IdTransaccionSession: $("#IdTransaccionSession").val()
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            IdTipoNota: $("#IdTipoNota").val()
         }
         $.ajax({
             type: 'POST',
