--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_deudas.cshtml
@@ -104,7 +104,16 @@
         settings.Columns.Add("co_valoriva", " IVA").Width = Unit.Percentage(10);
         settings.Columns.Add("co_subtotal_siniva", " SubSin IVA").Width = Unit.Percentage(10);
         settings.Columns.Add("co_total", "Total").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
 
+            });
+        });
 
 
         settings.Columns.Add(column =>
