--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/_GridViewPartial_proveedor.cshtml
@@ -83,7 +83,16 @@
         settings.Columns.Add("info_persona.pe_cedulaRuc", "Cédula/Ruc").Width = Unit.Percentage(20);
         settings.Columns.Add("descripcion_clas_prove", "Clase proveedor").Width = Unit.Percentage(30);
         settings.Columns.Add("info_persona.pe_nombreCompleto", "Nombre completo").Width = Unit.Percentage(30);
-        settings.Columns.Add("pr_estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
