--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/_GridViewPartial_catalogocxc.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/CatalogoCXC/_GridViewPartial_catalogocxc.cshtml
@@ -81,8 +81,17 @@
 
         settings.Columns.Add("IdCatalogo_tipo", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("Nombre", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
         settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
