--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/TipoCobro/_GridViewPartial_tipocobro.cshtml
@@ -82,8 +82,17 @@
         settings.Columns.Add("IdCobro_tipo", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("tc_abreviatura", "Abreviatura").Width = Unit.Percentage(20);
         settings.Columns.Add("tc_descripcion", "Descripción").Width = Unit.Percentage(40);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
         settings.Columns.Add("tc_Orden", "Orden").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
