--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ClaseProveedor/_GridViewPartial_clase_proveedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/ClaseProveedor/_GridViewPartial_clase_proveedor.cshtml
@@ -81,7 +81,16 @@
 
         settings.Columns.Add("cod_clase_proveedor", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("descripcion_clas_prove", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
