--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/_GridViewPartial_codigo_sri.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/CodigoSRI/_GridViewPartial_codigo_sri.cshtml
@@ -85,7 +85,16 @@
         settings.Columns.Add("co_codigoBase", "Código base").Width = Unit.Percentage(20);
         settings.Columns.Add("co_descripcion", "Descripción").Width = Unit.Percentage(30);
         settings.Columns.Add("co_porRetencion", "Retención").Width = Unit.Percentage(10);
-        settings.Columns.Add("co_estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
