--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/_GridViewPartial_tipo_codigo_sri.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/TipoCodigoSRI/_GridViewPartial_tipo_codigo_sri.cshtml
@@ -80,7 +80,16 @@
 
         settings.Columns.Add("IdTipoSRI", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("descripcion", "Descripción").Width = Unit.Percentage(60);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
         settings.Columns.Add(column =>
         {
             column.Caption = "CodigoSRI";
