--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/_GridViewPartial_puntoventa.cshtml
@@ -84,7 +84,16 @@
         settings.Columns.Add("IdPuntoVta", "Punto de venta").Width = Unit.Percentage(20);
         settings.Columns.Add("cod_PuntoVta", "Código").Width = Unit.Percentage(20);
         settings.Columns.Add("nom_PuntoVta", "Descripción").Width = Unit.Percentage(50);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(51);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "estado";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
