--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/_GridViewPartial_vendedor.cshtml
@@ -89,7 +89,16 @@
             column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
         });
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
