--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/_GridViewPartial_catalogo_fa.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/_GridViewPartial_catalogo_fa.cshtml
@@ -82,7 +82,17 @@
         settings.Columns.Add("IdCatalogo_tipo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Nombre", "Descripción").Width = Unit.Percentage(70);
         settings.Columns.Add("Orden", "Orden").Width = Unit.Percentage(10);
-        settings.Columns.Add("Estado", "Estado").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+
     });
 }
 @grid.Bind(Model).GetHtml()
