--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/ClienteTipo/_GridViewPartial_clientetipo.cshtml
@@ -81,7 +81,17 @@
 
         settings.Columns.Add("Cod_cliente_tipo", "Código").Width = Unit.Percentage(10);
         settings.Columns.Add("Descripcion_tip_cliente", "Descripción").Width = Unit.Percentage(50);
-        settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(50);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "EstadoBool";
+            column.Caption = "Estado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
+
     });
 }
 @grid.Bind(Model).GetHtml()
